Corrected Bootstrap color contrast with primary Fixed 6 out of 6 ADA issues (4.3.1 Color Contrast)

--- a/assets/scss/caweb/_variables.scss
+++ b/assets/scss/caweb/_variables.scss
@@ -7,3 +7,5 @@ $body-bg: #f1f1f1 !default;
 // Bootstrap Displays 
 // Adding display: contents to list of defaults
 $displays: none, inline, inline-block, block, table, table-row, table-cell, flex, inline-flex, contents !default;
+
+$primary: #046B99 !default;
